Changed layout and added additional info in forms of claim ,insure

--- a/css/otpVerification.css
+++ b/css/otpVerification.css
@@ -13,6 +13,10 @@ body {
   justify-content: center;
   background: #4070f4;
 }
+a {
+  color: inherit;  /* Inherits text color from the parent element */
+  text-decoration: none; /* Removes underline */
+}
 :where(.container, form, .input-field, header) {
   display: flex;
   flex-direction: column;
